# smart-health-card-reader

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
smart_health_card_reader/: __init__.py  config.py  parse.py  validate.py
tests/: __init__.py  conftest.py  test_parse_functions.py  test_qr_int_str_to_b64.py  test_qr_int_str_to_jws.py
