[tool.poetry]
name = "smart-health-card-reader"
version = "0.1.0"
description = ""
authors = ["Jeff Lerman <Jeffrey.Lerman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.3"]
build-backend = "poetry.core.masonry.api"
