[tool.poetry]
name = "smart-health-card-reader"
version = "0.1.0"
description = ""
authors = ["Jeff Lerman <Jeffrey.Lerman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.5.2.54"
pyzbar = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.3"]
build-backend = "poetry.core.masonry.api"
